k8s/base/assets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets
  namespace: optimistic-tanuki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: assets
  template:
    metadata:
      labels:
        app: assets
    spec:
      containers:
        - name: assets
          image: cjrutherford/optimistic_tanuki_assets:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '1000m'
          volumeMounts:
            - name: assets-storage
              mountPath: /usr/src/app/storage
          livenessProbe:
            tcpSocket:
              port: 3005
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3005
            initialDelaySeconds: 30
            periodSeconds: 5
      volumes:
        - name: assets-storage
          persistentVolumeClaim:
            claimName: assets-pvc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: assets
  namespace: optimistic-tanuki
spec:
  selector:
    app: assets
  ports:
    - port: 3005
      targetPort: 3005
  clusterIP: None
